package vuelosfis.modelo;

public class AvionComercial extends Avion {

    // CONSTRUCTOR LIMPIO (Solo llama al padre con super)
    public AvionComercial(String modelo, int capacidad) {
        super(modelo, capacidad);
    }
}
